Falta agregar dinamicamente cada 'card'

--- a/index.html
+++ b/index.html
@@ -12,26 +12,29 @@
 	<!-- Fuente -->
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap" rel="stylesheet">
 	<!-- Iconos -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
+	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-brands/css/uicons-brands.css'>
 </head>
 <body>
 	<header class="header">
+		<video class="header__video" src="./res/video/oceano.mp4" autoplay muted loop></video>
+		<div class="header__cont-bg-color"></div>
 		<div class="cont-limite">
 			<img class="header__img-perfil" src="./res/img/perfil.jpg" alt="Foto de perfil de Instagram">
 			<div class="header__cont-info">
 				<h1 class="header__nombre">Adrian Tafoya</h1>
 				<ul>
 					<li>
-						<span class="material-symbols-outlined">alternate_email</span>
-						<a href="mailto:atafoya863@gmail.com" class="link">atafoya863@gmail.com</a>
+						<i class="fi fi-rs-marker"></i>
+						Baja California, México
 					</li>
 					<li>
-						<span class="material-symbols-outlined">call</span>
-						<a href="tel:6461363812" class="link">646 136 3812</a>
+						<i class="fi fi-rs-at"></i>
+						<a href="mailto:atafoya863@gmail.com" class="link white">atafoya863@gmail.com</a>
 					</li>
 					<li>
-						<span class="material-symbols-outlined">link</span>
-						<a href="https://github.com/adriantaf/" class="link">github/adriantaf</a>
+						<i class="fi fi-brands-github"></i>
+						<a href="https://github.com/adriantaf/" class="link white">@adriantaf</a>
 					</li>
 				</ul>
 			</div>
@@ -69,7 +72,7 @@
 						Completado: <span id="completado">Si</span>
 					</p>
 					<div id="cont-link" class="card__body__cont-link">
-						<a href="#" target="_blank" id="link" class="card__body__link">Vista previa <span class="material-symbols-outlined">open_in_new</span></a>
+						<a href="#" target="_blank" id="link" class="card__body__link">Vista previa <i class="fi fi-rr-browsers"></i></a>
 					</div>
 				</section>
 			</article>
