--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Adrian TM</title>
+	<title>Adrian TM | Portafolio</title>
 	<link rel="icon" href="./res/icons/icono.png">
 	<!-- CSS -->
 	<link rel="stylesheet" href="./css/normalize.css">
@@ -70,15 +70,13 @@
 			<span id="scroll-icon" class="card__slider__icon-scroll">
 				<i class="fi fi-rs-gallery"></i>
 			</span>
-			<section id="slider" class="card__slider">
-				<img class="card__slider__img" src="" alt="Vista previa de un proyecto">
-			</section>
+			<section id="slider" class="card__slider"></section>
 			<section class="card__body">
 				<h3 id="nombre" class="card__body__titulo"></h3>
 				<p id="descripcion" class="card__body__descripcion"></p>
 				<ul class="card__body__especificaciones">
-					<li><b>No. de version:</b> <span id="version"></span></li>
-					<li><b>Tecnologias:</b> <span id="tecnologias"></span></li>
+					<li><b>No. de versión:</b> <span id="version"></span></li>
+					<li><b>Tecnologías:</b> <span id="tecnologias"></span></li>
 					<li><b>Estado:</b> <span id="estado"></span></li>
 					<!-- Completado / En proceso -->
 				</ul>
