--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<title>Adrian TM | Portafolio</title>
 	<link rel="icon" href="./res/icons/icono.png">
 	<!-- CSS -->
-	<link rel="stylesheet" href="./css/normalize.css">
-	<link rel="stylesheet" href="./css/main.css">
-	<link rel="stylesheet" href="./css/index.css">
+	<link rel="stylesheet" href="./res/css/normalize.css">
+	<link rel="stylesheet" href="./res/css/main.css">
+	<link rel="stylesheet" href="./res/css/index.css">
 	<!-- Fuente -->
 	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap" rel="stylesheet">
 	<!-- Iconos -->
@@ -45,12 +45,14 @@
 						<li>HTML</li>
 						<li>CSS</li>
 						<li>JavaScript</li>
+						<li>POO</li>
+						<li>PHP</li>
 					</ul>
 				</div>
 				<div>
 					<h3>Aprendiendo</h3>
 					<ul>
-						<li>PHP</li>
+						<li>Node JS</li>
 						<li>MySQL</li>
 					</ul>
 				</div>
@@ -74,12 +76,7 @@
 			<section class="card__body">
 				<h3 id="nombre" class="card__body__titulo"></h3>
 				<p id="descripcion" class="card__body__descripcion"></p>
-				<ul class="card__body__especificaciones">
-					<li><b>No. de versión:</b> <span id="version"></span></li>
-					<li><b>Tecnologías:</b> <span id="tecnologias"></span></li>
-					<li><b>Estado:</b> <span id="estado"></span></li>
-					<!-- Completado / En proceso -->
-				</ul>
+				<p id="tecnologias"></p>
 				<div id="cont-actions" class="card__body__actions">
 					<span id="top-icon" class="card__body__top-icon">
 						<i class="fi fi-rs-star-comment-alt"></i>
