--- a/index.html
+++ b/index.html
@@ -42,17 +42,19 @@
 				<div>
 					<h3>Conocimientos</h3>
 					<ul>
-						<li>HTML</li>
-						<li>CSS</li>
+						<li>HTML y CSS</li>
 						<li>JavaScript</li>
-						<li>POO</li>
-						<li>PHP</li>
+						<li>Astro</li>
+						<li>Tailwind</li>
+						<li>POO en Java</li>
 					</ul>
 				</div>
 				<div>
 					<h3>Aprendiendo</h3>
 					<ul>
+						<li>React</li>
 						<li>Node JS</li>
+						<li>PHP</li>
 						<li>MySQL</li>
 					</ul>
 				</div>
@@ -81,7 +83,7 @@
 					<span id="top-icon" class="card__body__top-icon">
 						<i class="fi fi-rs-star-comment-alt"></i>
 					</span>
-					<a href="#" target="_blank" id="link" class="card__body__link">Vista previa <i class="fi fi-rs-browsers"></i></a>
+					<a href="#" target="_blank" id="link" class="card__body__link">Vista previa <i class="fi fi-rs-share-square"></i></a>
 				</div>
 			</section>
 		</article>
